WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70158
Fix clang compiler warnings
https://bugs.webkit.org/show_bug.cgi?id=70158
Summary
Fix clang compiler warnings
David Kilzer (:ddkilzer)
Reported
2011-10-14 17:03:36 PDT
Created
attachment 111110
[details]
Patch Reviewed by NOBODY (OOPS!). Source/WebCore: * dom/ViewportArguments.cpp: (WebCore::computeViewportAttributes): Use std::max<float>() instead of std::max(). Source/WebKit/mac: The following two methods in WebDelegateImplementationCaching.h are ambiguous in WebChromeClient::runJavaScriptPrompt() because the compiler can't decide how to convert the WebCore::String defaultText argument: id CallUIDelegate(WebView *, SEL, id, id); id CallUIDelegate(WebView *, SEL, id, BOOL); The fix is to perform the conversion explicitly. * WebCoreSupport/WebChromeClient.mm: (WebChromeClient::runJavaScriptPrompt): Extract a defaultString variable to convert the WebCore::String to an NSString*, then use defaultString in place of defaultText. --- 4 files changed, 39 insertions(+), 7 deletions(-)
Attachments
Patch
(5.33 KB, patch)
2011-10-14 17:03 PDT
,
David Kilzer (:ddkilzer)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
WebKit Review Bot
Comment 1
2011-10-14 17:07:14 PDT
Attachment 111110
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebKit/mac/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Source/WebCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Joseph Pecoraro
Comment 2
2011-10-14 18:24:04 PDT
Comment on
attachment 111110
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=111110&action=review
> Source/WebKit/mac/ChangeLog:19 > + variable to convert the WebCore::String to an NSString*, then
Nit: "WebCore::String" => "WTF::String"
David Kilzer (:ddkilzer)
Comment 3
2011-10-14 21:39:05 PDT
Committed
r97538
: <
http://trac.webkit.org/changeset/97538
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug