<http://webkit.org/b/70158> Fix clang compiler warnings

Reviewed by Darin Adler.

Source/WebCore:

* dom/ViewportArguments.cpp:
(WebCore::computeViewportAttributes): Use std::max<float>()
instead of std::max().

Source/WebKit/mac:

The following two methods in WebDelegateImplementationCaching.h
are ambiguous in WebChromeClient::runJavaScriptPrompt() because
the compiler can't decide how to convert the WTF::String
defaultText argument:

    id CallUIDelegate(WebView *, SEL, id, id);
    id CallUIDelegate(WebView *, SEL, id, BOOL);

The fix is to perform the conversion explicitly.

* WebCoreSupport/WebChromeClient.mm:
(WebChromeClient::runJavaScriptPrompt): Extract a defaultString
variable to convert the WTF::String to an NSString*, then
use defaultString in place of defaultText.

Canonical link: https://commits.webkit.org/86266@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97538 268f45cc-cd09-0410-ab3c-d52691b4dbfc