Source/WebCore/dom/ViewportArguments.cpp
@@ -134,7 +134,7 @@ ViewportAttributes computeViewportAttributes(ViewportArguments args, int desktop
             result.initialScale = availableWidth / args.width;
         if (args.height != ViewportArguments::ValueAuto) {
             // if 'auto', the initial-scale will be negative here and thus ignored.
-            result.initialScale = max(result.initialScale, availableHeight / args.height);
+            result.initialScale = max<float>(result.initialScale, availableHeight / args.height);
         }
     }
 
@@ -162,13 +162,13 @@ ViewportAttributes computeViewportAttributes(ViewportArguments args, int desktop
         height = width * availableHeight / availableWidth;
 
     // Extend width and height to fill the visual viewport for the resolved initial-scale.
-    width = max(width, availableWidth / result.initialScale);
-    height = max(height, availableHeight / result.initialScale);
+    width = max<float>(width, availableWidth / result.initialScale);
+    height = max<float>(height, availableHeight / result.initialScale);
     result.layoutSize.setWidth(static_cast<int>(roundf(width)));
     result.layoutSize.setHeight(static_cast<int>(roundf(height)));
 
     // Update minimum scale factor, to never allow zooming out more than viewport
-    result.minimumScale = max(result.minimumScale, max(availableWidth / width, availableHeight / height));
+    result.minimumScale = max<float>(result.minimumScale, max(availableWidth / width, availableHeight / height));
 
     result.userScalable = args.userScalable;
     // Make maximum and minimum scale equal to the initial scale if user is not allowed to zoom in/out.
